[project]
name = "kagan"
version = "0.19.0-beta.38"
description = "Supervision layer for AI coding agents — isolate work, verify it before review, ship on your terms"
license = "MIT"
authors = [
  { name = "Altynbek Orumbayev", email = "altynbek.orumbayev@makerx.com.au" },
]
keywords = [
  "tui",
  "terminal",
  "ai",
  "agents",
  "mcp",
  "supervision",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Typing :: Typed",
]
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = [
  "click>=8.1.0",
  # Pinned explicitly despite being a transitive dep of mcp - prevents pre-release breakage (see v0.14.1)
  "httpx>=0.27.0,<1.0.0",
  "loguru>=0.7.0",
  "mcp>=1.26.0,<2.0.0",
  "packaging>=24.0",
  "pathspec>=0.12.0",
  "platformdirs>=4.3.0",
  "pydantic>=2.0.0",
  "prompt-toolkit>=3.0.0",
  "pyyaml>=6.0",
  "rich>=14.0.0",
]

[project.scripts]
kagan = "kagan.cli:cli"
kg = "kagan.cli:cli"

[project.urls]
Homepage = "https://kagan.sh"
Documentation = "https://docs.kagan.sh"
Repository = "https://github.com/kagan-sh/kagan"
Issues = "https://github.com/kagan-sh/kagan/issues"
Changelog = "https://github.com/kagan-sh/kagan/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kagan"]

[dependency-groups]
dev = [
  "import-linter>=2.11",
  "poethepoet>=0.40.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.14",
  "pyrefly>=0.50.0",
  "vulture>=2.14",
  "mkdocs>=1.6.1",
  "mkdocs-material[imaging]>=9.7.0",
  "mkdocs-redirects>=1.2.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "python-semantic-release>=10.5.3",
  # Transitive via python-semantic-release; pin past SNYK-PYTHON-GITPYTHON-16624542 (high)
  "gitpython>=3.1.50",
  "pytest-sugar>=1.1.1",
  "pillow>=12.2.0",
  "inline-snapshot>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]
extend-exclude = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations".msg = "PEP 649: annotations are deferred by default on 3.14+; the import is never needed."

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TC", "TID", "RUF"]
ignore = [
  "RUF006", # Allow fire-and-forget asyncio.create_task (intentional pattern)
  "SIM102", # Allow nested if statements for readability
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"src/kagan/core/__init__.py" = [
  "F401",
] # Public re-export hub; bound names intentionally exceed __all__ for internal/test imports
"src/kagan/mcp/**/*.py" = [
  "TC001", "TC002", "TC003",
] # MCP framework evaluates annotations at runtime via inspect.signature(eval_str=True)
"tests/**" = [
  "F811",
  "RUF059",
  "TC001",
  "TC002",
  "TC003",
  "SIM105",
  "F841",
  "B905",
  "E501",
] # Test fixtures and async harnesses

[tool.ruff.format]
docstring-code-format = true

[tool.pyrefly]
# Scoped to src/ — what CI gates (poe typecheck = `pyrefly check src/`). tests/ carries
# ~135 latent findings (mostly test idioms: dynamic fake-stub attrs, un-narrowed Task|None,
# 3rd-party stub gaps) that are not yet gated; including tests here made editors surface that
# ungated backlog. Gating tests/ is tracked as a low-priority follow-up issue.
project_includes = ["src"]
search_path = ["src", "."]
permissive-ignores = true

# All checks enabled; genuine 3rd-party stub misreads are suppressed inline with a justification.

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [
  "references",
  "scripts",
  "docs",
  "site",
  "htmlcov",
  ".venv",
  ".git",
  ".kagan_worktrees",
]
python_files = ["test_*.py", "*_cases.py"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "fast: pure-logic tests with no I/O, no DB, no subprocess",
  "unit: pure logic tests with no I/O",
  "contract: protocol/schema boundary tests",
  "smoke: critical user-path and transport checks",
  "snapshot: visual regression tests",
  "property: property-based tests with hypothesis",
  "integration: tests scoped to real SDK stdio integration (see tests/integration/)",
  "windows_ci: windows compatibility tests that must run in the Windows CI job",
  "accept: real Harness + ledger + git acceptance (tests/kagan/core/)",
  "mcp: tests scoped to kagan-mcp protocol boundary",
  "integration_github: native GitHub integration (tests/integration/github/)",
  "mock_platform_system(name): override platform.system() for the test",
]
addopts = "-p no:anyio -x -n auto --dist=loadgroup"

[tool.coverage.run]
source = ["src/kagan"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.poe.tasks]
dev = "kagan"
test = "pytest tests/"
lint = "ruff check src/ tests/"
check-loc = "python scripts/check_python_loc_budget.py --max-lines 2500"
check-complexity = "ruff check src/ --select C90"
check-test-quality = { help = "Lint test files for tautological patterns", cmd = "python scripts/check_test_quality.py" }
check-boundaries = { cmd = "lint-imports", help = "Verify package boundaries (no cross-package _* imports)" }
check-syntax = { cmd = "python -m compileall -q -f src/", help = "Byte-compile src/ so a Py2-shaped except in the prompt_toolkit module can't land (§1.1)" }
check-guardrails = ["check-loc", "check-complexity", "check-test-quality"]
format = "ruff format src/ tests/"
typecheck = "pyrefly check src/"
deadcode = "vulture"
check = ["check-syntax", "lint", "typecheck", "deadcode", "check-boundaries", "test"]
docs-dev = "mkdocs serve -f config/mkdocs.local.yml"
docs-build = "mkdocs build -f config/mkdocs.yml"
docs-check = "mkdocs build -f config/mkdocs.yml"

[tool.poe.tasks.install-local]
help = "Install kagan as a local CLI tool (replaces any existing install)"
cmd = "uv tool install --editable --force --reinstall ."

[tool.poe.tasks.dev-setup]
help = "Install local CLI, reset DB, and stop core daemon"
sequence = [{ ref = "install-local" }, { cmd = "kagan reset --force" }]

[tool.poe.tasks.fix]
help = "Fix linting issues and format code"
sequence = [
  { cmd = "ruff check --fix src/ tests/" },
  { cmd = "ruff format src/ tests/" },
]

[tool.poe.tasks.release-preview]
sequence = [
  { cmd = "uv run semantic-release version --print-last-released-tag" },
  { cmd = "uv run semantic-release version --print-tag --as-prerelease" },
]
help = "Preview current and next prerelease version"

[tool.poe.tasks.release-dry-run-beta]
shell = "uv run semantic-release --noop -vv version --as-prerelease --prerelease-token beta --print-tag"
help = "Dry-run beta release (no changes made)"

[tool.poe.tasks.workflows-check]
help = "Validate GitHub Actions workflows using act (requires act installed)"
sequence = [
  { shell = "act --list -W .github/workflows/" },
  { shell = "act push --dryrun -W .github/workflows/ci.yml" },
  { shell = "act workflow_dispatch --dryrun -W .github/workflows/cd.yaml" },
  { shell = "act workflow_dispatch --dryrun -W .github/workflows/post-release-update-test.yaml" },
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# Keep uv.lock root package version in sync with stamped pyproject version (PSR sets $PACKAGE_NAME).
build_command = "uv lock --upgrade-package \"$PACKAGE_NAME\" && git add uv.lock && uv build --wheel"
commit_message = "{version}\n\n[skip ci] Automatically generated by python-semantic-release"
tag_format = "v{version}"
allow_zero_version = true

[tool.semantic_release.changelog]
template_dir = ".github/semantic-release"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "beta"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat", "refactor"]
patch_tags = ["fix", "perf", "chore"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.importlinter]
root_package = "kagan"

# Surfaces may import the kagan.core facade (api) and documented stable submodules
# (models, doctor_checks) only — not internal engine/persistence modules.
[[tool.importlinter.contracts]]
name = "Surfaces must not import kagan.core internal modules"
type = "forbidden"
source_modules = ["kagan.cli", "kagan.mcp", "kagan.format"]
allow_indirect_imports = true
forbidden_modules = [
    "kagan.core.harness",
]

# kagan.cli private modules must not be imported from kagan.mcp or kagan.format.
[[tool.importlinter.contracts]]
name = "kagan.mcp and kagan.format must not import kagan.cli private modules"
type = "forbidden"
source_modules = ["kagan.mcp", "kagan.format"]
allow_indirect_imports = true
forbidden_modules = [
    "kagan.cli._bootstrap",
    "kagan.cli.doctor_emit",
]

# --- kagan.runtime_env is a startup leaf primitive ---
[[tool.importlinter.contracts]]
name = "kagan.runtime_env must not import other kagan packages"
type = "forbidden"
source_modules = ["kagan.runtime_env"]
allow_indirect_imports = true
forbidden_modules = [
    "kagan.core",
    "kagan.cli",
    "kagan.mcp",
    "kagan.format",
]

[tool.vulture]
paths = ["src/"]
min_confidence = 90
ignore_names = ["output_byte_limit", "terminal_id", "params"]
